feat: List all buttons (#13)
SDK improvements too

---------
