# smart-switches/server/spec/openapi.yaml
@@ -1,1 +1,358 @@
-{"components": {"schemas": {"Config": {"additionalProperties": false, "properties": {"$schema": {"description": "A URL to the JSON Schema for this object.", "examples": ["https://example.com/schemas/Config.json"], "format": "uri", "readOnly": true, "type": "string"}, "switches": {"additionalProperties": {"$ref": "#/components/schemas/Switch"}, "type": "object"}}, "required": ["switches"], "type": "object"}, "ErrorDetail": {"additionalProperties": false, "properties": {"location": {"description": "Where the error occurred, e.g. 'body.items[3].tags' or 'path.thing-id'", "type": "string"}, "message": {"description": "Error message text", "type": "string"}, "value": {"description": "The value at the given location"}}, "type": "object"}, "ErrorModel": {"additionalProperties": false, "properties": {"$schema": {"description": "A URL to the JSON Schema for this object.", "examples": ["https://example.com/schemas/ErrorModel.json"], "format": "uri", "readOnly": true, "type": "string"}, "detail": {"description": "A human-readable explanation specific to this occurrence of the problem.", "examples": ["Property foo is required but is missing."], "type": "string"}, "errors": {"description": "Optional list of individual error details", "items": {"$ref": "#/components/schemas/ErrorDetail"}, "type": ["array", "null"]}, "instance": {"description": "A URI reference that identifies the specific occurrence of the problem.", "examples": ["https://example.com/error-log/abc123"], "format": "uri", "type": "string"}, "status": {"description": "HTTP status code", "examples": [400], "format": "int64", "type": "integer"}, "title": {"description": "A short, human-readable summary of the problem type. This value should not change between occurrences of the error.", "examples": ["Bad Request"], "type": "string"}, "type": {"default": "about:blank", "description": "A URI reference to human-readable documentation for the error.", "examples": ["https://example.com/errors/example"], "format": "uri", "type": "string"}}, "type": "object"}, "LayoutV4": {"additionalProperties": false, "properties": {"1": {"type": "string"}, "2": {"type": "string"}, "3": {"type": "string"}, "4": {"type": "string"}, "5": {"type": "string"}, "6": {"type": "string"}, "7": {"type": "string"}, "8": {"type": "string"}, "off": {"type": "string"}, "on": {"type": "string"}}, "type": "object"}, "LayoutV5": {"additionalProperties": false, "properties": {"5": {"type": "string"}, "6": {"type": "string"}, "7": {"type": "string"}, "8": {"type": "string"}, "flipped": {"type": "boolean"}, "off": {"type": "string"}, "on": {"type": "string"}, "wheel-routines": {"items": {"$ref": "#/components/schemas/WheelRoutine"}, "type": ["array", "null"]}}, "type": "object"}, "LayoutV6": {"additionalProperties": false, "properties": {"5": {"type": "string"}, "6": {"type": "string"}, "7": {"type": "string"}, "8": {"type": "string"}, "flipped": {"type": "boolean"}, "off": {"type": "string"}, "on": {"type": "string"}, "wheel-routines": {"items": {"$ref": "#/components/schemas/WheelRoutine"}, "type": ["array", "null"]}}, "type": "object"}, "LayoutV7": {"additionalProperties": false, "properties": {"1": {"type": "string"}, "2": {"type": "string"}, "3": {"type": "string"}, "4": {"type": "string"}, "5": {"type": "string"}, "6": {"type": "string"}, "7": {"type": "string"}, "8": {"type": "string"}, "flipped": {"type": "boolean"}, "off": {"type": "string"}, "on": {"type": "string"}}, "type": "object"}, "Layouts": {"additionalProperties": false, "properties": {"v4": {"$ref": "#/components/schemas/LayoutV4"}, "v5": {"$ref": "#/components/schemas/LayoutV5"}, "v6": {"$ref": "#/components/schemas/LayoutV6"}, "v7": {"$ref": "#/components/schemas/LayoutV7"}}, "type": "object"}, "PostPressRequestBody": {"additionalProperties": false, "properties": {"$schema": {"description": "A URL to the JSON Schema for this object.", "examples": ["https://example.com/schemas/PostPressRequestBody.json"], "format": "uri", "readOnly": true, "type": "string"}, "key": {"type": "string"}, "layout": {"type": "string"}, "switch": {"type": "string"}}, "required": ["switch", "key", "layout"], "type": "object"}, "Switch": {"additionalProperties": false, "properties": {"layouts": {"$ref": "#/components/schemas/Layouts"}}, "required": ["layouts"], "type": "object"}, "WheelRoutine": {"additionalProperties": false, "properties": {"command": {"type": "string"}, "name": {"type": "string"}, "rgb": {"items": {"format": "int64", "type": "integer"}, "type": ["array", "null"]}}, "required": ["name", "rgb", "command"], "type": "object"}}}, "info": {"title": "Smart Switches", "version": ""}, "openapi": "3.1.0", "paths": {"/api/config": {"get": {"operationId": "get-config", "responses": {"200": {"content": {"application/json": {"schema": {"$ref": "#/components/schemas/Config"}}}, "description": "OK"}, "500": {"content": {"application/problem+json": {"schema": {"$ref": "#/components/schemas/ErrorModel"}}}, "description": "Internal Server Error"}}}, "put": {"operationId": "put-config", "requestBody": {"content": {"application/json": {"schema": {"$ref": "#/components/schemas/Config"}}}, "required": true}, "responses": {"200": {"content": {"application/json": {"schema": {"$ref": "#/components/schemas/Config"}}}, "description": "OK"}, "422": {"content": {"application/problem+json": {"schema": {"$ref": "#/components/schemas/ErrorModel"}}}, "description": "Unprocessable Entity"}, "500": {"content": {"application/problem+json": {"schema": {"$ref": "#/components/schemas/ErrorModel"}}}, "description": "Internal Server Error"}}}}, "/api/press": {"post": {"operationId": "press", "requestBody": {"content": {"application/json": {"schema": {"$ref": "#/components/schemas/PostPressRequestBody"}}}, "required": true}, "responses": {"200": {"content": {"application/json": {"schema": {}}}, "description": "OK"}, "422": {"content": {"application/problem+json": {"schema": {"$ref": "#/components/schemas/ErrorModel"}}}, "description": "Unprocessable Entity"}, "500": {"content": {"application/problem+json": {"schema": {"$ref": "#/components/schemas/ErrorModel"}}}, "description": "Internal Server Error"}}}}}}
+components:
+  schemas:
+    Config:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/api/schemas/Config.json
+          format: uri
+          readOnly: true
+          type: string
+        switches:
+          additionalProperties:
+            $ref: '#/components/schemas/Switch'
+          type: object
+      required:
+        - switches
+      type: object
+    ErrorDetail:
+      additionalProperties: false
+      properties:
+        location:
+          description: Where the error occurred, e.g. 'body.items[3].tags' or 'path.thing-id'
+          type: string
+        message:
+          description: Error message text
+          type: string
+        value:
+          description: The value at the given location
+      type: object
+    ErrorModel:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/api/schemas/ErrorModel.json
+          format: uri
+          readOnly: true
+          type: string
+        detail:
+          description: A human-readable explanation specific to this occurrence of the problem.
+          examples:
+            - Property foo is required but is missing.
+          type: string
+        errors:
+          description: Optional list of individual error details
+          items:
+            $ref: '#/components/schemas/ErrorDetail'
+          type:
+            - array
+            - "null"
+        instance:
+          description: A URI reference that identifies the specific occurrence of the problem.
+          examples:
+            - https://example.com/error-log/abc123
+          format: uri
+          type: string
+        status:
+          description: HTTP status code
+          examples:
+            - 400
+          format: int64
+          type: integer
+        title:
+          description: A short, human-readable summary of the problem type. This value should not change between occurrences of the error.
+          examples:
+            - Bad Request
+          type: string
+        type:
+          default: about:blank
+          description: A URI reference to human-readable documentation for the error.
+          examples:
+            - https://example.com/errors/example
+          format: uri
+          type: string
+      type: object
+    Executable:
+      additionalProperties: false
+      properties:
+        domain:
+          type: string
+        entityId:
+          type: string
+        friendlyName:
+          type: string
+      required:
+        - domain
+        - entityId
+        - friendlyName
+      type: object
+    LayoutV4:
+      additionalProperties: false
+      properties:
+        "1":
+          type: string
+        "2":
+          type: string
+        "3":
+          type: string
+        "4":
+          type: string
+        "5":
+          type: string
+        "6":
+          type: string
+        "7":
+          type: string
+        "8":
+          type: string
+        "off":
+          type: string
+        "on":
+          type: string
+      type: object
+    LayoutV5:
+      additionalProperties: false
+      properties:
+        "5":
+          type: string
+        "6":
+          type: string
+        "7":
+          type: string
+        "8":
+          type: string
+        flipped:
+          type: boolean
+        "off":
+          type: string
+        "on":
+          type: string
+        wheel-routines:
+          items:
+            $ref: '#/components/schemas/WheelRoutine'
+          type:
+            - array
+            - "null"
+      type: object
+    LayoutV6:
+      additionalProperties: false
+      properties:
+        "5":
+          type: string
+        "6":
+          type: string
+        "7":
+          type: string
+        "8":
+          type: string
+        flipped:
+          type: boolean
+        "off":
+          type: string
+        "on":
+          type: string
+        wheel-routines:
+          items:
+            $ref: '#/components/schemas/WheelRoutine'
+          type:
+            - array
+            - "null"
+      type: object
+    LayoutV7:
+      additionalProperties: false
+      properties:
+        "1":
+          type: string
+        "2":
+          type: string
+        "3":
+          type: string
+        "4":
+          type: string
+        "5":
+          type: string
+        "6":
+          type: string
+        "7":
+          type: string
+        "8":
+          type: string
+        flipped:
+          type: boolean
+        "off":
+          type: string
+        "on":
+          type: string
+      type: object
+    Layouts:
+      additionalProperties: false
+      properties:
+        v4:
+          $ref: '#/components/schemas/LayoutV4'
+        v5:
+          $ref: '#/components/schemas/LayoutV5'
+        v6:
+          $ref: '#/components/schemas/LayoutV6'
+        v7:
+          $ref: '#/components/schemas/LayoutV7'
+      type: object
+    ListExecutablesResponseBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/api/schemas/ListExecutablesResponseBody.json
+          format: uri
+          readOnly: true
+          type: string
+        Executables:
+          additionalProperties:
+            $ref: '#/components/schemas/Executable'
+          type: object
+      required:
+        - Executables
+      type: object
+    PostPressRequestBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/api/schemas/PostPressRequestBody.json
+          format: uri
+          readOnly: true
+          type: string
+        key:
+          type: string
+        layout:
+          type: string
+        switch:
+          type: string
+      required:
+        - switch
+        - key
+        - layout
+      type: object
+    Switch:
+      additionalProperties: false
+      properties:
+        layouts:
+          $ref: '#/components/schemas/Layouts'
+      required:
+        - layouts
+      type: object
+    WheelRoutine:
+      additionalProperties: false
+      properties:
+        command:
+          type: string
+        name:
+          type: string
+        rgb:
+          items:
+            format: int64
+            type: integer
+          type:
+            - array
+            - "null"
+      required:
+        - name
+        - rgb
+        - command
+      type: object
+info:
+  title: Smart Switches
+  version: ""
+openapi: 3.1.0
+paths:
+  /api/config:
+    get:
+      operationId: get-config
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Config'
+          description: OK
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+          description: Internal Server Error
+    put:
+      operationId: put-config
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Config'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Config'
+          description: OK
+        "422":
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+          description: Internal Server Error
+  /api/executables:
+    get:
+      operationId: list-executables
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListExecutablesResponseBody'
+          description: OK
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+          description: Internal Server Error
+  /api/press:
+    post:
+      operationId: press
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostPressRequestBody'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema: {}
+          description: OK
+        "422":
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+          description: Internal Server Error
